--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 services:
   - type: web
-    name: myapp
+    name: earphones_review
     env: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: myapp-db
+          name: earphones_review-db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
 
 databases:
-  - name: myapp-db
-    databaseName: myapp
-    user: myapp
+  - name: earphone_review_DB
+    databaseName: earphone_review_db
+    user: earphones_review
