--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: earphones_review-db
+          name: earphone_review-db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
